--- a/htmlexp1.html
+++ b/htmlexp1.html
@@ -6,6 +6,7 @@
     <title>Experiment</title>
 </head>
 <body>
+    <pre>
                                                                                                                                         ▲▲▲▲▲ ▲▲▲                                                                                             
                                                                                                                                         ▲       ▲▲         ▲▲▲▲▲▲▲▲                                                                           
                                                                                                                     ▲▲▲▲▲▲▲▲▲▲          ▲        ▲        ▲▲      ▲▲▲                                                                         
@@ -223,5 +224,7 @@
                                                                                                                                                                                                                @  @@@@                                                                                                                                                  
                                                                                                                                                                                                            @@@@@@@@@                                                                                                                                                    
                                                                                                                                                                                                            @@@ @ @@                                                                                                                                                     
-</body>
+
+                                                                                                                                                                                                        </pre>
+                                                                                                                                                                                                        </body>
 </html>
