--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    hi vcu!!
+    hi vcu!!<br>
+    <a href="htmlexp1.html"> Experiment 1</a><br>
+    <a href="htmlexp2.html"> Experiment 2</a>
 </body>
 </html>
