--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     hi vcu!!<br>
-    <a href="htmlexp1.html"> Experiment 1</a><br>
-    <a href="htmlexp2.html"> Experiment 2</a>
+    <a href="htmlexp1.html"> <i>Experiment 1</i></a><br>
+    <a href="htmlexp2.html"> <i>Experiment 2</i></a>
 </body>
 </html>
