--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     hi vcu!!<br>
-    <a href="htmlexp1.html"> <i>Experiment 1</i></a><br>
-    <a href="htmlexp2.html"> <i>Experiment 2</i></a>
+    <a href="htmlexp1.html"> <i>HTML Experiment 1</i></a><br>
+    <a href="htmlexp2.html"> <i>HTML Experiment 2</i></a>
+    <a href="htmltinkering.html"> <i>HTML tinkering</i></a>
+    <a href="cssexp1.html"> <i>CSS Experiment 1</i></a>
+    <a href="cssexp1.1.html"> <i>CSS Experiment 1.1</i></a>
+    <a href="cssexp1.2.html"> <i>CSS Experiment 1.2</i></a>
+    <a href="cssexp1.3.html"> <i>CSS Experiment 1.3</i></a>
+    <a href="csscreature.html"> <i>CSS Experiment creature</i></a>
 </body>
 </html>
